Fix card padding on mobile

--- a/common/src/styles/_shapes.scss
+++ b/common/src/styles/_shapes.scss
@@ -39,7 +39,7 @@ $scroll-padding-mobile: 64px;
 
 $card-padding: 28px;
 $card-padding-tablet: 24px;
-$card-padding-mobile: 12px;
+$card-padding-mobile: 18px;
 
 @mixin standard-border {
     border-radius: $border-radius;
